[package]
name = "quiet_custodian"
version = "0.1.0"
authors = ["richardleesimpson <github.elag9@passmail.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
regex = "1.10.3"
chrono = "0.4.35"
lazy_static = "1.4.0"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
