[package]
name = "quiet_custodian"
version = "0.1.0"
authors = ["richardleesimpson <github.elag9@passmail.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
notify = "6.1.1"
thiserror = "1.0.59"
